[package]
name = "graph_map"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]
readme = "README.md"

description = "Memory mapped directed graph representation"

# These URLs point to more information about the repository
documentation = "https://frankmcsherry.github.com/graph-map"
homepage = "https://github.com/frankmcsherry/graph-map"
repository = "https://github.com/frankmcsherry/graph-map.git"
keywords = ["graph"]
license = "MIT"

[dependencies]
rand="0.4"
memmap="0.5.2"